// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockDraggable moves blocks: Initial order 1`] = `
"<!-- fp:paragraph -->
<p>This is a paragraph.</p>
<!-- /fp:paragraph -->

<!-- fp:image {"sizeSlug":"large"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:gallery {"linkTo":"none"} -->
<figure class="fp-block-gallery has-nested-images columns-default is-cropped"><!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image --></figure>
<!-- /fp:gallery -->"
`;

exports[`BlockDraggable moves blocks: Paragraph block moved from first to second position 1`] = `
"<!-- fp:image {"sizeSlug":"large"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:paragraph -->
<p>This is a paragraph.</p>
<!-- /fp:paragraph -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:gallery {"linkTo":"none"} -->
<figure class="fp-block-gallery has-nested-images columns-default is-cropped"><!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image --></figure>
<!-- /fp:gallery -->"
`;

exports[`BlockDraggable moves blocks: Spacer block moved from third to first position 1`] = `
"<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:image {"sizeSlug":"large"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:paragraph -->
<p>This is a paragraph.</p>
<!-- /fp:paragraph -->

<!-- fp:gallery {"linkTo":"none"} -->
<figure class="fp-block-gallery has-nested-images columns-default is-cropped"><!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image -->

<!-- fp:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fp-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fp:image --></figure>
<!-- /fp:gallery -->"
`;
